yarn all the things

--- a/src/custom/package.json
+++ b/src/custom/package.json
@@ -10,7 +10,7 @@
     "pop-tei-render-styles": "pwd ; mkdir -p ../../dist/assets/css ../../dist/files && cp ../files/*.css ../../dist/assets/css",
     "pop-file-assets": "pwd ; cp -r ../files/* ../../dist/files",
     "build": "rollup -c rollup.config.js && yarn pop-tei-render-styles && yarn pop-file-assets",
-    "start": "npm run watch",
+    "start": "yarn run watch",
     "watch": "rollup --watch -c rollup.config.js"
   },
   "dependencies": {
