--- a/package.json
+++ b/package.json
@@ -3,32 +3,21 @@
   "scripts": {
     "start": "cd app && hax11ty serve",
     "preinstall": "cd src/custom && yarn install && cd ../..",
-    "clean-up-pre": "rm -rf dist/build",
+    "clean-up-pre": "rm -rf dist/build package-lock.json",
     "clean-up-post": "rm dist/assets/styles.css && cp src/styles.css dist/assets/styles.css && rm -rf dist/custom && cp -R src/custom dist/custom",
-    "build": "yarn run clean-up-pre && cd src/custom && yarn run build && cd ../../app && env HAXCMS_CDN=true env HAXCMS_SERVICE_WORKER=true env HAXCMS_GITHUB=true hax11ty build && yarn run clean-up-post",
-    "local-build": "yarn run clean-up-pre && cd src/custom && yarn run build && cd ../../app &&  env HAXCMS_CONTEXT=haxcms hax11ty build && yarn run clean-up-post"
-  },
-  "bin": {
-    "eleventy": ".bin/eleventy"
+    "build":        "yarn run clean-up-pre && cd src/custom && yarn run build && cd ../../app && env HAXCMS_CDN=true  env HAXCMS_SERVICE_WORKER=true  env HAXCMS_GITHUB=true  env HAXCMS_CONTEXT=''     hax11ty build && yarn run clean-up-post",
+    "local-build":  "yarn run clean-up-pre && cd src/custom && yarn run build && cd ../../app && env HAXCMS_CDN=false env HAXCMS_SERVICE_WORKER=false env HAXCMS_GITHUB=false env HAXCMS_CONTEXT=haxcms hax11ty build && yarn run clean-up-post",
+    "custom-build": "yarn run clean-up-pre && cd src/custom && yarn run build && cd ../../app && env HAXCMS_SERVICE_WORKER=true hax11ty build && yarn run clean-up-post"
   },
   "devDependencies": {
-    "es-module-shims": "^0.4.6",
-    "pnpm": "6.33.1",
-    "@11ty/eleventy": "1.0.1",
-    "@oclif/plugin-help": "5.1.12",
+    "@haxcms/11ty": "^0.0.13",
     "@11ty/eleventy-plugin-rss": "1.0.7",
-    "@haxcms/11ty": "0.0.13",
-    "browserslist": "4.20.2",
-    "crypto": "1.0.1",
     "eleventy-xml-plugin": "0.1.0",
-    "fs-extra": "8.1.0",
-    "gray-matter": "4.0.2"
-  },
-  "resolutions": {
-    "browserslist": "4.20.2"
+    "crypto": "1.0.1",
+    "gray-matter": "4.0.2",
+    "fs-extra": "8.1.0"
   },
   "dependencies": {
-    "es-module-shims": "^0.4.6",
-    "yarn": "^1.22.18"
+    "es-module-shims": "^0.4.6"
   }
 }
