--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  docker: circleci/docker@2.0.3
+  docker: circleci/docker@1.3.0
 
 jobs:
   release_image:
@@ -33,7 +33,8 @@ jobs:
     environment:
       REGISTRY_HOST: harbor.k8s.libraries.psu.edu
     steps:
-    - setup_remote_docker
+    - setup_remote_docker:
+        version: 19.03.13
     - checkout
     - docker/check:
         registry: $REGISTRY_HOST
